DevTools: fix rule insertion with file URLs.

This patch allows accessing rules for inspector style sheets.
Our tests didn't catch the regression since we run with
--allow-file-access-from-files flag.

Bug: 814937
Change-Id: I58eabb8e299a81c5a912d5a42175ab78ad904704
Reviewed-on: https://chromium-review.googlesource.com/935749
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539166}
Former-commit-id: 8a4ccd6b71037a1452a2cb2466029e1cb17eed48